# pluralcppc

acc_cpp/m02/helloworld/: main  main.cpp
acc_cpp/m02/helloworld/libtest_project/: test.h
acc_cpp/m02/staticlibtest/libtest_project/: test.cpp
acc_cpp/m03/apptypes/: CMakeLists.txt  main.cpp
acc_cpp/m05/ControlFlow/: CMakeLists.txt  main.cpp
acc_cpp/m06/oop/: CMakeLists.txt  Person.h  main.cpp
acc_cpp/m07/memory/: main.cpp
acc_cpp/m07/rvalues/: CMakeLists.txt
acc_cpp/m08/ConsumingTemplates/: CMakeLists.txt  main.cpp
acc_cpp/m09/Algorithms/: CMakeLists.txt
acc_cpp/m09/Numberics/: CMakeLists.txt
acc_cpp/m09/untitled/: CMakeLists.txt  main.cpp
design_patters_cpp/m1/: CMakeLists.txt  main.cpp
design_patters_cpp/m1_monad/: CMakeLists.txt  main.cpp
design_patters_cpp/m2_builders/: CMakeLists.txt  main.cpp
design_patters_cpp/m2_facets/: CMakeLists.txt  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonJobBuilder.h  main.cpp
helloworld/: main.cpp
helloworld/libtest_project/: test.h
m02/sharedlibtest/: main.cpp
m02/sharedlibtest/libtest_project/: CMakeLists.txt
m04/functionsandvars/: CMakeLists.txt  main.cpp
m06/oop/: Address.h  EmpFactory.h  Employee.cpp  Employee.h  Person.cpp
m07/memory/: CMakeLists.txt
m07/rvalues/: main.cpp
m09/Algorithms/: main.cpp
m09/Numberics/: main.cpp
m09/Streams/: CMakeLists.txt  main.cpp
staticlibtest/: CMakeLists.txt
staticlibtest/libtest_project/: CMakeLists.txt
